--- a/youtube_channel/index.html
+++ b/youtube_channel/index.html
@@ -14,8 +14,8 @@
         <header>
             <nav>
                 <div class="leftnav">
-                    <a href="index.html">Home</a>
-                    <a href="howorks.html">How Works?</a>
+                    <a href="index.html">Inicio</a>
+                    <a href="free_articles.html">Publicaciones</a>
                 </div>
                 <div class="centernav">
                     <a id="logo_link" href="index.html">
@@ -24,7 +24,7 @@
                 </div>
                 <div class="rightnav">
                     <a href="faq.html">FAQ</a>
-                    <a href="contactus.html">Contact Us</a>
+                    <a href="contactus.html">Comentar</a>
                 </div>
             </nav>
             <div class="rectangle"></div>
@@ -36,74 +36,32 @@
                 </div>
             </div>
             <div class="main-grid">
-                <section class="message">
-                    <h2>Why is important to know the algorithm of social networks?</h2>
-                    <p>If you want to grow in your business, is important to know how
-                        social networks work, with the purpose to get better incomes.
-                        The algorithms of each social network are designed to keep the
-                        people inside of their website and consume the content of their
-                        creators, sometimes this is bad because you tend to lose a lot
-                        of time inside of these websites, and sometimes is good because
-                        you can learn different things about any topic. So, let’s go to
-                        make a better place inside of this social media, one of the best
-                        ways to grow inside of any social network is by uploading original
-                        and valuable content, which means the people can use your content
-                        to resolve a problem, to get knowledge, or to help in some issue.
-                        No matter if you are noob editing videos or if you don’t have a
-                        good camera, people will recognize the value of your content.</p>
+                <section class="message_one">
+                    <h2><span class="headline_backgorund_home">¿Qué es el Algorithm 152?</span></h2>
+                    <p>Esta pagina es para las personas que han visto mis videos de <span class="minute_background">1 minuto</span> y tienen el deseo de aprender más. Los videos
+                        de un minuto no cubren ciertos detalles que me gustaría compartir con ustedes.
+                    </p>
                 </section>
-                <div class="container_carousel">
-                    <div class="carousel">
-                    <div class="slides-grid slides">
-                        <input type="radio" name="radio-buttons" id="img-1" checked />
-                        <div class="slide-container">
-                        <div class="slide-image">
-                            <img src="images/home-yellow.jpg" alt="photo girl with yellow coat">
-                        </div>
-                        <div class="carousel-controls">
-                            <label for="img-3" class="prev-slide">
-                            <span>&lsaquo;</span>
-                            </label>
-                            <label for="img-2" class="next-slide">
-                            <span>&rsaquo;</span>
-                            </label>
-                        </div>
-                        </div>
-                        <input type="radio" name="radio-buttons" id="img-2" />
-                        <div class="slide-container">
-                        <div class="slide-image">
-                            <img src="images/home-black.jpg" alt="photo girl in black and white">
-                        </div>
-                        <div class="carousel-controls">
-                            <label for="img-1" class="prev-slide">
-                            <span>&lsaquo;</span>
-                            </label>
-                            <label for="img-3" class="next-slide">
-                            <span>&rsaquo;</span>
-                            </label>
-                        </div>
-                        </div>
-                        <input type="radio" name="radio-buttons" id="img-3" />
-                        <div class="slide-container">
-                        <div class="slide-image">
-                            <img src="images/home-red.jpg" alt="photo of girl with a red coat">
-                        </div>
-                        <div class="carousel-controls">
-                            <label for="img-2" class="prev-slide">
-                            <span>&lsaquo;</span>
-                            </label>
-                            <label for="img-1" class="next-slide">
-                            <span>&rsaquo;</span>
-                            </label>
-                        </div>
-                        </div>
-                        <div class="carousel-dots">
-                        <label for="img-1" class="carousel-dot" id="img-dot-1"></label>
-                        <label for="img-2" class="carousel-dot" id="img-dot-2"></label>
-                        <label for="img-3" class="carousel-dot" id="img-dot-3"></label>
-                        </div>
-                    </div>
-                    </div>
+                <div class="slide_image_one">
+                    <img src="images/rsz_algoritmo_tiktok2.jpg" alt="miniatura de tiktok">
+                </div>
+                <section class="message_two">
+                    <h2><span class="headline_backgorund_home">Videos de 1 Minuto</span></h2>
+                    <p>Estos se pueden ver en mi canal pricipal de youtube, estan
+                    enfocados en dar <span class="minute_background">información valiosa</span>, la cuál es difícil de encontrar en el idioma español. Y con mis habilidades para editar les entrego
+                    la información de la mejor manera posible.</p>
+                </section>
+                <div class="slide_image_two">
+                    <img src="images/rsz_nyan_cat.jpg" alt="miniatura de tiktok">
+                </div>
+                <section class="message_three">
+                    <h2><span class="headline_backgorund_home">Publicaciones Detalladas</span></h2>
+                    <p>Para mantener mi vida economica he decidido realizar <span class="minute_background">Publicaciones Detalladas.</span> Cada video de 1 minuto tendrá una "Publicación Detallada"
+                        las cuales serán exclusivas para los miembros del canal de youtube. La membresía tendrá un valor de <span class="minute_background">$0.99 dólares por mes.</span> Les invito a leer las publicaciones gratuitas que se encuentran en esta pagina.
+                    </p>
+                </section>
+                <div class="slide_image_three">
+                    <img src="images/rsz_publicacion_detallada.jpg" alt="miniatura de tiktok">
                 </div>
             </div>
         </main>
