--- a/youtube_channel/site-plan.html
+++ b/youtube_channel/site-plan.html
@@ -11,31 +11,31 @@
     <header>
       <h1>Algorithm 152 Site Plan</h1>
       <h2>Juan Valencia</h2>
-      <h2>WDD 130-22</h2>
+      <h2>Ecuador</h2>
       <!-- In the header above, add the name or your site, your name and class number. For example if you are in section 3 you would put WDD 130.03 -->
     </header>
     <main>
 
       <!-- ------------------------Steps 2-3------------------------------ -->
       <hr>
-      <h2>Overview</h2>
-      <h3>Purpose</h3>
-      <p>I noticed that there is a lot of misinformation to grow their accounts on social media that motivate people to use "fake followers". To fight this, I decided to gather the best information explaining how the social media algorithm works. With the purpose of people knowing the good practices to obtain more followers.
+      <h2>Visión General</h2>
+      <h3>Propósito</h3>
+      <p>Noté que hay mucha desinformación para hacer crecer sus cuentas en las redes sociales que motivan a las personas a usar "seguidores falsos". Para combatir esto, decidí recopilar la mejor información que explica cómo funciona el algoritmo de las redes sociales. Con el fin de que las personas conozcan las buenas prácticas para obtener más seguidores.
         </p>  <!-- change this -->
 
 
-      <h3>Audience</h3>
-      <p>My target audience is "young adults" (between twelve and eighteen years old) and the "new adults" (between twenty and thirty years old) because some of these people want to build a business around social media networks.
+      <h3>Audiencia</h3>
+      <p>Mi público objetivo son los "adultos jóvenes" (entre doce y dieciocho años) y los "nuevos adultos" (entre veinte y treinta años) porque algunas de estas personas quieren construir un negocio en torno a las redes sociales.
       </p>  <!-- change this -->
 
       <hr>
-      <h2>Branding</h2>
+      <h2>Marca</h2>
       <h3>Website Logo</h3>
       <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
       <img src="images/logo.png" alt="Logo image">
       <hr>
       <h2>
-        Style Guide
+        Guía de Estilo
       </h2>
 
       <!-- ------------------------Steps 4-8------------------------------ -->
@@ -46,11 +46,11 @@
       <!--  The colors you choose for a website are one of the most important decisions you will make. Follow the instructions on the activity in iLearn then return and replace the color codes below with the hex color codes (the 6 digit numbers that show at the bottom of each color) for the colors you have chosen below.  You should have at least 2 colors but do not have to fill in all 4 if you do not need them.  -->
 
       <!-- Copy and paste the URL to your finished palette below Make sure to paste it into both spots -->
-      Palette URL: <a href="https://coolors.co/e63946-ffffff-a8dadc-457b9d" target="_blank">https://coolors.co/e63946-ffffff-a8dadc-457b9d</a>
+      Paleta URL: <a href="https://coolors.co/e63946-ffffff-a8dadc-457b9d" target="_blank">https://coolors.co/e63946-ffffff-a8dadc-457b9d</a>
 
 
       <table class="colors">
-        <tr><th>Primary</th><th>Secondary</th><th>Accent 1</th><th>Accent 2</th></tr>
+        <tr><th>Primario</th><th>Secondario</th><th>Accent 1</th><th>Accent 2</th></tr>
         <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
         <tr><td class="primary"></td><td class="secondary"></td><td class="accent1"></td><td class="accent2"></td></tr>
       </table>
@@ -58,24 +58,24 @@
       <!-- ------------------------Step 9------------------------------ -->
 
       <h3>
-        Typography
+        Typografía
       </h3>
       <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Why did you choose what you did?  Make sure to review the list of web safe fonts at W3Schools.org as a starting point.  Think also about which of your colors above you might use for background and font colors. -->
 
       <h4>
-        Heading Font: Josefin Sans  <!-- change this -->
+        Fuente de Encabezado: Josefin Sans  <!-- change this -->
       </h4>
       <h4>
-        Paragraph Font: Open Sans  <!-- change this -->
+        Fuente de parrafo: Open Sans  <!-- change this -->
       </h4>
       <h3>
-        Normal paragraph example
+        Ejemplo de Parrafo normal
       </h3>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
       </p>
       <h3>
-        Colored paragraph example
+        Ejemplo del color de parrafo
       </h3>
       <p class="colored">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
@@ -84,24 +84,25 @@
       <!-- ------------------------Step 10------------------------------ -->
 
       <h3>
-        Navigation
+        Botones de navegación
       </h3>
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav>
-        <a href="#">Home</a>
-        <a href="#">How Works?</a>
+        <a href="#">Inicio</a>
+        <a href="#">Artículos Gratis</a>
         <a href="#">FAQ</a>
+        <a href="#">Comentario</a>
       </nav>
       <hr>
       <h2>
-        Site Map
+        Mapa del Sitio
       </h2>
       <div class="sitemap">
         <div class="sm-home">
-          Home
+          Inicio
         </div>
         <div class="sm-page2">
-          How works? <!-- change this -->
+          Artículos Gratis <!-- change this -->
         </div>
         <div class="sm-page3">
           FAQ  <!-- change this -->
@@ -122,21 +123,21 @@
       <!-- --------Content Section -------------- -->
       <hr>
       <h2>
-        Content
+        Contenido
       </h2>
-      <h3>Home page</h3>
+      <h3>Pagina de Inicio</h3>
       <p>
-        On this web page, you will find some advice to grow your social network.
+        En esta página web encontrarás algunos consejos para hacer crecer tu red social.
       </p>
       <p class="bolder">
-        Why is important to know the algorithm of social networks? 
+        ¿Por qué es importante conocer el algoritmo de las redes sociales?
       </p>
       <p>
-        If you want to grow in your business, is important to know how social networks work, with the purpose to get better incomes. 
-        The algorithms of each social network are designed to keep the people inside of their website and consume the content of their creators, sometimes this is bad because you tend to lose a lot of time inside of these websites, and sometimes is good because you can learn different things about any topic.
-        So, let’s go to make a better place inside of this social media, one of the best ways to grow inside of any social network is by uploading original and valuable content, which means the people can use your content to resolve a problem, to get knowledge, or to help in some issue. No matter if you are noob editing videos or if you don’t have a good camera, people will recognize the value of your content.
+        Si quieres crecer en tu negocio, es importante saber cómo funcionan las redes sociales, con el fin de obtener mejores ingresos.
+         Los algoritmos de cada red social están diseñados para mantener a las personas dentro de su sitio web y consumir el contenido de sus creadores, a veces esto es malo porque tiendes a perder mucho tiempo dentro de estos sitios web, y a veces es bueno porque puedes aprender cosas diferentes sobre cualquier tema.
+         Entonces, vamos a hacer un lugar mejor dentro de esta red social, una de las mejores maneras de crecer dentro de cualquier red social es subiendo contenido original y valioso, lo que significa que la gente puede usar tu contenido para resolver un problema, para obtener conocimiento, o para ayudar en algún tema. No importa si eres novato editando videos o si no tienes una buena cámara, al principio no tenemos todas estas herramientas.
       </p>
-      <p class="bolder">Images for the Home page</p>
+      <p class="bolder">Imagenes para la pagina principal</p>
         <img src="images/home-page-banner.jpg" alt="Banner of website">
         <img src="images/home-page-phone.jpg" alt="Phone with apps" width="550px" height="500px">
         <img src="images/home-black.jpg" alt="A girl" width="500px" height="600px">
