--- a/youtube_channel/free_articles.html
+++ b/youtube_channel/free_articles.html
@@ -14,8 +14,8 @@
         <header>
             <nav>
                 <div class="leftnav">
-                    <a href="index.html">Home</a>
-                    <a href="howorks.html">How Works?</a>
+                    <a href="index.html">Inicio</a>
+                    <a href="free_articles.html">Publicaciones</a>
                 </div>
                 <div class="centernav">
                     <a id="logo_link" href="index.html">
@@ -24,7 +24,7 @@
                 </div>
                 <div class="rightnav">
                     <a href="faq.html">FAQ</a>
-                    <a href="contactus.html">Contact Us</a>
+                    <a href="contactus.html">Comentar</a>
                 </div>
             </nav>
             <div class="rectangle"></div>
