edditing publication section

--- a/youtube_channel/index.html
+++ b/youtube_channel/index.html
@@ -52,7 +52,7 @@
                     la información de la mejor manera posible.</p>
                 </section>
                 <div class="slide_image_two">
-                    <img src="images/rsz_nyan_cat.jpg" alt="miniatura de tiktok">
+                    <img src="images/rsz_nyan_cat.jpg" alt="miniatura de nyancat">
                 </div>
                 <section class="message_three">
                     <h2><span class="headline_backgorund_home">Publicaciones Detalladas</span></h2>
@@ -61,13 +61,13 @@
                     </p>
                 </section>
                 <div class="slide_image_three">
-                    <img src="images/rsz_publicacion_detallada.jpg" alt="miniatura de tiktok">
+                    <img src="images/rsz_publicacion_detallada.jpg" alt="miniatura publicaciones detalladas">
                 </div>
             </div>
         </main>
         <footer>
             <img class="logo" src="images/logo.png" alt="algorithm 152 logo" width="150" height="150">
-            <h3>Algorithm 152 &copy; 2022 - Valencia Juan</h3>
+            <h3>Algorithm 152 &copy; 2022 - valenciia (yt)</h3>
             <h3><a class="site_plan" href="site-plan.html" target="_blank">Site Plan</a></h3>
             <div class="social">
                 <a href="https://www.youtube.com/channel/UCZQjRtNoklEli2Zfu8I-vuw" target="_blank">
