--- a/youtube_channel/free_articles.html
+++ b/youtube_channel/free_articles.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>How works?</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Algorithm 152</title>
+    <link rel="icon" type="image/x-icon" href="images/rsz_nyan_cat.jpg">
     <link rel="stylesheet" href="styles/style.css">
 </head>
 
@@ -31,10 +32,10 @@
         </header>
         <div id="mySidenav" class="sidenav">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-            <a href="free_articles.html">Publicaciones</a>
-            <a href="publi_insta.html">Instagram</a>
-            <a href="publi_youtube.html">Youtube</a>
-            <a href="publi_tiktok.html">Tiktok</a>
+            <a href="free_articles.html">Publicaciones de:</a>
+            <a href="publi_insta.html">Algoritmo Instagram</a>
+            <a href="publi_youtube.html">Algoritmo Youtube</a>
+            <a href="publi_tiktok.html">Algoritmo Tiktok</a>
         </div>
         <span style="font-size:30px;cursor:pointer;font-family: var(--heading-font);" onclick="openNav()">&#9776; Abrir</span>
         <div id="h1_title">
@@ -50,23 +51,23 @@
                     <p><b><em>Los videos</em></b> de <span class="minute_background">1 minutos</span> tienen consejos para crecer en las redes sociales, pero un minuto
                         no es suficiente para cubrir todo el tema. Sin embargo, Las "Publicaciones Detalladas" 
                         incluirán <span class="minute_background">ejemplos, razones, causas y consecuencias,</span> con esta información usted deberían ser
-                        capaz de aplicar los consejos de una manera personalizada.</p>
+                        capaz de aplicar los consejos de la mejor manera.</p>
                 </section>
             </div>
         </main>
         <footer>
-            <img class="logo" src="images/logo.png" alt="algorithm 152 logo" width="150" height="150">
-            <h3>Algorithm 152 &copy; 2022 - Valencia Juan</h3>
+            <img class="logo_bot" src="images/logo.png" alt="algorithm 152 logo" width="150" height="150">
+            <h3>Algorithm 152 &copy; 2022 - valenciia (yt)</h3>
             <h3><a class="site_plan" href="site-plan.html" target="_blank">Site Plan</a></h3>
             <div class="social">
-                <a href="https://youtube.com" target="_blank">
-                    <img class="social-media" src="images/youtube.png" alt="youtube icon">
+                <a href="https://www.youtube.com/channel/UCZQjRtNoklEli2Zfu8I-vuw" target="_blank">
+                    <img class="social-media" src="images/rsz_youtube.png" alt="youtube icon">
                 </a>
-                <a href="https://twitter.com" target="_blank">
-                    <img class="social-media" src="images/twitter.png" alt="twitter icon">
+                <a href="https://www.instagram.com/iamvalenciia/?hl=es-la" target="_blank">
+                    <img class="social-media" src="images/rsz_instagram.png" alt="instagram icon">
                 </a>
-                <a href="https://github.com/" target="_blank">
-                    <img class="social-media" src="images/github.png" alt="github icon">
+                <a href="https://www.tiktok.com" target="_blank">
+                    <img class="social-media" src="images/rsz_tiktok.png" alt="tiktok icon">
                 </a>
             </div>
         </footer>
