--- a/youtube_channel/index.html
+++ b/youtube_channel/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Algorithm 152</title>
+    <link rel="icon" type="image/x-icon" href="images/rsz_nyan_cat.jpg">
     <link rel="stylesheet" href="styles/style.css">
 </head>
 
@@ -66,18 +67,18 @@
             </div>
         </main>
         <footer>
-            <img class="logo" src="images/logo.png" alt="algorithm 152 logo" width="150" height="150">
+            <img class="logo_bot" src="images/logo.png" alt="algorithm 152 logo" width="150" height="150">
             <h3>Algorithm 152 &copy; 2022 - valenciia (yt)</h3>
             <h3><a class="site_plan" href="site-plan.html" target="_blank">Site Plan</a></h3>
             <div class="social">
                 <a href="https://www.youtube.com/channel/UCZQjRtNoklEli2Zfu8I-vuw" target="_blank">
-                    <img class="social-media" src="images/youtube.png" alt="youtube icon">
+                    <img class="social-media" src="images/rsz_youtube.png" alt="youtube icon">
                 </a>
-                <a href="https://twitter.com/iamvalenciia" target="_blank">
-                    <img class="social-media" src="images/twitter.png" alt="twitter icon">
+                <a href="https://www.instagram.com/iamvalenciia/?hl=es-la" target="_blank">
+                    <img class="social-media" src="images/rsz_instagram.png" alt="instagram icon">
                 </a>
-                <a href="https://github.com/Valenci4" target="_blank">
-                    <img class="social-media" src="images/github.png" alt="github icon">
+                <a href="https://www.tiktok.com" target="_blank">
+                    <img class="social-media" src="images/rsz_tiktok.png" alt="tiktok icon">
                 </a>
             </div>
         </footer>
