--- a/youtube_channel/site-plan.html
+++ b/youtube_channel/site-plan.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en-us">
     
-  <head>
-    <meta charset="utf-8">
-    <title>Site Plan</title>
-    <link type="text/css" rel="stylesheet" href="styles/site-plan.css">
-  </head>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Algorithm 152</title>
+  <link rel="icon" type="image/x-icon" href="images/rsz_nyan_cat.jpg">
+  <link rel="stylesheet" href="styles/style.css">
+</head>
 
   <body>
     <header>
