--- a/youtube_channel/faq.html
+++ b/youtube_channel/faq.html
@@ -25,7 +25,7 @@
                 </div>
                 <div class="rightnav">
                     <a href="faq.html">FAQ</a>
-                    <a href="contactus.html">Comentar</a>
+                    <a href="contactus.html">Suscriptores</a>
                 </div>
             </nav>
             <div class="rectangle"></div>
@@ -33,50 +33,35 @@
         <div id="banner">
             <div id="banner-box-faq">
                 <img id="banner-img" src="images/home-page-banner.jpg" alt="banner of website">
-                <h1 class="home-title">Frequently Asked Question</h1>
+                <h1 class="home-title">Preguntas frecuentes</h1>
             </div>
         </div>
         <main>
             <div class="content-faq">
                 <details class="story">
-                    <summary>How do I know if the content of my profile on any social media is good?</summary>
+                    <summary>¿Cómo sé si el contenido es bueno?</summary>
 
-                    <p>See your stats to know the average of people who sees the video complete,
-                        if your average is over 50%, you are in a good way.
+                    <p>Mira tus estadísticas para saber el promedio de personas que ven el video completo, si tu promedio es superior al 50%, vas por buen camino.
                     </p>
                 </details>
                 <details class="story">
-                    <summary>What type of content do I need to upload to get more followers?</summary>
-                    <p>
-                        The content evergreen will help you to get views through the years,
-                        the videos categorized as “evergreen” there are content that people
-                        keep searching for regardless of the season. For example, videos that
-                        explain “how to write a website?” or “how to create a YouTube channel?”.
-                        Sensational content will attract views for a certain season, maybe a couple
-                        of months at most, but in the end, people will stop looking for it and no
-                        one will continue to watch your video.
+                    <summary>¿Qué tipo de contenido necesito subir para obtener más seguidores?</summary>
+                    <p>El contenido "evergree" lo ayudará a obtener vistas a lo largo de los años, los videos categorizados como "evergreen" son contenido que las personas siguen buscando independientemente de la temporada. Por ejemplo, videos que explican "¿cómo escribir un sitio web?" o “¿cómo crear un canal de YouTube?”. El contenido sensacional atraerá vistas durante una temporada determinada, tal vez un par de meses como máximo, pero al final, la gente dejará de buscarlo y nadie seguirá viendo tu video.
+                        
                     </p>
                     <img class="image_faq" src="images/FAQ-people.jpg" alt="banner of website" height="300" width="440">
                 </details>
                 <details class="story">
-                    <summary>Why I can’t see progress on my social media?</summary>
-                    <p>
-                        Be patient, the progress takes time, the best thing you can do is made feedback to know what you
-                        can
-                        improve in your content.
+                    <summary>¿Por qué no puedo ver el progreso en mis redes sociales?</summary>
+                    <p>Ten paciencia, el progreso lleva tiempo, lo mejor que puedes hacer es retro alimentación para saber qué puedes mejorar en tu contenido.
                     </p>
                     <img class="image_faq" src="images/FAQ-people-meeting.jpg" alt="banner of website" height="300"
                         width="440">
 
                 </details>
                 <details class="story">
-                    <summary>On what social networks I can earn a better income of money?</summary>
-                    <p>
-                        In my opinion, YouTube, because in Tiktok you need to be one of the most famous to get income,
-                        in Instagram is similar to Tiktok, it depends a lot on the brand that wants to sponsor
-                        you and for a brand to sponsor you need a good number of followers for not say millions.
-                        Instead, on YouTube, you can easily earn money through advertising on your video for every
-                        view your channel receives.
+                    <summary>¿En qué red social puedo obtener mejores ingresos de dinero?</summary>
+                    <p>En mi opinión, YouTube, porque en Tiktok necesitas ser uno de los más famosos para obtener ingresos, en Instagram es similar a Tiktok, depende mucho de la marca que te quiera patrocinar y para que una marca patrocine necesitas un buena cantidad de seguidores por no decir millones. En cambio, en YouTube, puede ganar dinero fácilmente a través de publicidad en su video por cada vista que reciben sus videos.
                     </p>
                 </details>
             </div>
