--- a/youtube_channel/free_articles.html
+++ b/youtube_channel/free_articles.html
@@ -25,17 +25,17 @@
                 </div>
                 <div class="rightnav">
                     <a href="faq.html">FAQ</a>
-                    <a href="contactus.html">Comentar</a>
+                    <a href="contactus.html">Suscriptores</a>
                 </div>
             </nav>
             <div class="rectangle"></div>
         </header>
         <div id="mySidenav" class="sidenav">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-            <a href="free_articles.html">Publicaciones de:</a>
-            <a href="publi_insta.html">Algoritmo Instagram</a>
-            <a href="publi_youtube.html">Algoritmo Youtube</a>
-            <a href="publi_tiktok.html">Algoritmo Tiktok</a>
+            <a href="free_articles.html">Publicaciones</a>
+            <a href="publi_insta.html">Instagram</a>
+            <a href="publi_youtube.html">Youtube</a>
+            <a href="publi_tiktok.html">Tiktok</a>
         </div>
         <span style="font-size:30px;cursor:pointer;font-family: var(--heading-font);" onclick="openNav()">&#9776; Abrir</span>
         <div id="h1_title">
@@ -50,8 +50,14 @@
                     </div>
                     <p><b><em>Los videos</em></b> de <span class="minute_background">1 minutos</span> tienen consejos para crecer en las redes sociales, pero un minuto
                         no es suficiente para cubrir todo el tema. Sin embargo, Las "Publicaciones Detalladas" 
-                        incluirán <span class="minute_background">ejemplos, razones, causas y consecuencias,</span> con esta información usted deberían ser
+                        incluirán <span class="minute_background">ejemplos, causas y consecuencias,</span> con esta información usted deberían ser
                         capaz de aplicar los consejos de la mejor manera.</p>
+
+                    <p>Un <span class="minute_background">ejemplo</span> sirve para explicar o ilustrar una afirmación general, o para proporcionar un caso particular que hace de 
+                        modelo para el caso general. El ejemplo es escogido libremente, pero busca aclarar la comprensión de un fenómeno o proceso.</p>
+
+                    <p>Además, Se conoce como <span class="minute_background">causa</span> al fundamento, motivo, origen y principio de algo. Por ejemplo: si una persona sube 3 videos
+                        en youtube, y obtiene 50 suscritories, los videos son la causa de obtener esos suscritores. La causa es el motivo o razón para obrar.</p>
                 </section>
             </div>
         </main>
