--- a/youtube_channel/index.html
+++ b/youtube_channel/index.html
@@ -25,7 +25,7 @@
                 </div>
                 <div class="rightnav">
                     <a href="faq.html">FAQ</a>
-                    <a href="contactus.html">Comentar</a>
+                    <a href="contactus.html">Suscriptores</a>
                 </div>
             </nav>
             <div class="rectangle"></div>
