--- a/youtube_channel/publi_youtube.html
+++ b/youtube_channel/publi_youtube.html
@@ -24,7 +24,7 @@
                 </div>
                 <div class="rightnav">
                     <a href="faq.html">FAQ</a>
-                    <a href="contactus.html">Comentar</a>
+                    <a href="contactus.html">Suscriptores</a>
                 </div>
             </nav>
             <div class="rectangle"></div>
@@ -38,7 +38,8 @@
         </div>
         <span style="font-size:30px;cursor:pointer;font-family: var(--heading-font);" onclick="openNav()">&#9776; Abrir</span>
         <div id="h1_title">
-            <h1 class="grid_title_h1">Publicaciones Detalldas</h1>
+            <h1 class="grid_title_h1">Se esta Escribiendo..</h1>
+            <h5 class="grid_title_h1" >Vuelve pronto</h5>
         </div>
         <main>
             
