working in the suscriptores section

--- a/youtube_channel/faq.html
+++ b/youtube_channel/faq.html
@@ -25,7 +25,7 @@
                 </div>
                 <div class="rightnav">
                     <a href="faq.html">FAQ</a>
-                    <a href="contactus.html">Suscriptores</a>
+                    <a href="suscriptores.html">Suscriptores</a>
                 </div>
             </nav>
             <div class="rectangle"></div>
@@ -61,7 +61,7 @@
                 </details>
                 <details class="story">
                     <summary>¿En qué red social puedo obtener mejores ingresos de dinero?</summary>
-                    <p>En mi opinión, YouTube, porque en Tiktok necesitas ser uno de los más famosos para obtener ingresos, en Instagram es similar a Tiktok, depende mucho de la marca que te quiera patrocinar y para que una marca patrocine necesitas un buena cantidad de seguidores por no decir millones. En cambio, en YouTube, puede ganar dinero fácilmente a través de publicidad en su video por cada vista que reciben sus videos.
+                    <p>En mi opinión, YouTube, porque en Tiktok necesitas ser uno de los más famosos para obtener ingresos, en Instagram es similar a Tiktok, depende mucho de la marca que te quiera patrocinar y para que una marca patrocine necesitas un buena cantidad de seguidores por no decir millones. En cambio, en YouTube, puede ganar dinero fácilmente a través de publicidad.
                     </p>
                 </details>
             </div>
