--- a/youtube_channel/publi_youtube.html
+++ b/youtube_channel/publi_youtube.html
@@ -24,7 +24,7 @@
                 </div>
                 <div class="rightnav">
                     <a href="faq.html">FAQ</a>
-                    <a href="contactus.html">Suscriptores</a>
+                    <a href="suscriptores.html">Suscriptores</a>
                 </div>
             </nav>
             <div class="rectangle"></div>
